--- a/style.css
+++ b/style.css
@@ -3,3 +3,42 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+nav, figcaption {
+  text-align: center;
+}
+
+nav a {
+  padding-right: 0 10%;
+  padding-left: 0 10%;
+  background-color: grey;
+  margin: 0 auto;
+}
+
+featured-property p {
+  width: 800%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+#details div {
+  float: left;
+  background-color: red;
+  width: 25%;
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
